Table identities {
  userid text [primary key]
  public_key text
}

Table eintrag {
  id integer [primary key]
  beginn integer [not null]
  ende integer [not null]
  kategorie_id integer [not null, ref: < kategorien.id]
  thema text
  ort text
  raum text
  dienstverlauf text
  besonderheiten text
}

Table eintrag_zu_betreuer {
  eintrag_id integer [ref: < eintrag.id]
  betreuer_id integer [ref: < betreuer.id]
}

Table betreuer {
  id integer [primary key]
  name text [not null]
  geschlecht integer [not null]
}

Table signatures {
  eintrag_id integer [ref: < eintrag.id]
  userid text [ref: < identities.userid]
  signature text [not null]
  signed_at timestamp [not null]
  sign_version integer [not null, default: 1]
  indexes {
    (eintrag_id, userid) [pk]
    (eintrag_id, signed_at) [unique]
  }
}

Table kategorien {
  id integer [primary key]
  name text [not null]
}

Table eintrag_zu_jugendliche {
  eintrag_id integer [ref: < eintrag.id]
  jugendliche_id integer [ref: < jugendlicher.id]
  anmerkung integer
}

Table jugendlicher {
  id integer [primary key]
  name text [not null]
  geschlecht integer [not null]
  passnummer text
  geburtstag integer [not null]
  eintrittsdatum integer [not null]
  austrittsdatum integer
  austrittsgrund integer
  ersetzt_durch integer [null, ref: - jugendlicher.id]
}

Table info {
  field text [primary key]
  value text [not null]
}